--- a/ne_control/templates/ne_control/index.html
+++ b/ne_control/templates/ne_control/index.html
@@ -4,10 +4,10 @@
 
 {% block content %}
 
-<main>
-    <div>
-        <h1></h1>
-    </div>
-</main>
+<div class="max-w-full overflow-auto bg-white rounded-2xl shadow-md p-6">
+    <button class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700">
+        Impotar CSV
+    </button>
+</div>
 
 {% endblock %}
