--- a/ne_control/templates/ne_control/index.html
+++ b/ne_control/templates/ne_control/index.html
@@ -1,13 +1,20 @@
 {% extends 'base.html' %}
 
-{% block title %}Controle de NE{% endblock %}
+{% block title %}Importador de NE{% endblock %}
 
 {% block content %}
 
 <div class="max-w-full overflow-auto bg-white rounded-2xl shadow-md p-6">
-    <button class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700">
-        Impotar CSV
-    </button>
+
+    <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+
+        <input type="file" name="csv_file" accept=".csv" required class="mb-4">
+
+        <button class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700">
+            Impotar CSV
+        </button>
+    </form>
 </div>
 
 {% endblock %}
