--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -4,8 +4,40 @@
 
 {% block content %}
 
-<div>
-    <h1>Login</h1>
+<div class="flex items-center justify-center min-h-screen overflow-hidden">
+    <div class="w-full max-w-sm p-6 bg-white rounded-xl shadow-md">
+        <h2 class="text-2xl font-bold text-center mb-6 text-gray-800">Acessar Controle de NE</h2>
+
+        <form method="POST" action="{% url 'loging' %}">
+            {% csrf_token %}
+
+            <!-- Nome de Usuário/Seção -->
+            <div class="mb-4">
+                <label for="username" class="block text-sm font-medium text-gray-700 mb-1">Usuário</label>
+                <input type="text" name="username" id="username" required
+                       class="w-full px-4 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
+            </div>
+
+            <!-- Senha -->
+            <div class="mb-6">
+                <label for="password" class="block text-sm font-medium text-gray-700 mb-1">Senha</label>
+                <input type="password" name="password" id="password" required
+                       class="w-full px-4 py-2 border rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500">
+            </div>
+
+            <!-- Logar -->
+            <button type="submit"
+                    class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded-md">
+                Acessar
+            </button>
+
+            <!-- Links adicionais -->
+            <div class="mt-4 text-sm text-center text-gray-600">
+                <a href="#" class="text-blue-500 hover:underline">Esqueceu a senha?</a> |
+                <a href="#" class="text-blue-500 hover:underline">Solicitar login</a>
+            </div>
+        </form>
+    </div>
 </div>
 
 {% endblock %}
