--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -13,7 +13,7 @@
     <!-- Style.css -->
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
-<body class="bg-gray-100 p-6">
+<body class="bg-gray-100">
     {% block content %}{% endblock %}
 </body>
 </html>
