--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -8,7 +8,7 @@
     <div class="w-full max-w-sm p-6 bg-white rounded-xl shadow-md">
         <h2 class="text-2xl font-bold text-center mb-6 text-gray-800">Acessar Controle de NE</h2>
 
-        <form method="POST" action="{% url 'loging' %}">
+        <form method="POST" action="{% url 'access_login' %}">
             {% csrf_token %}
 
             <!-- Nome de Usuário/Seção -->
