--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -8,6 +8,27 @@
     <div class="w-full max-w-sm p-6 bg-white rounded-xl shadow-md">
         <h2 class="text-2xl font-bold text-center mb-6 text-gray-800">Acessar o Controle de</h2>
 
+        <form method="POST">
+            {% csrf_token %}
+
+            {% if form.non_field_errors %}
+                {% for error in form.non_field_errors %}
+                    <div>
+                        <p class="text-red-700">{{ error }}</p>
+                    </div>
+                {% endfor %}
+            {% endif %}
+            
+            <label for="{{ form.username.id_for_label }}" class="block text-gray-700">Usuário</label>
+            {{ form.username }}
+
+            <label for="{{ form.password.id_for_label }}" class="block text-gray-700">Senha</label>
+            {{ form.password }}
+
+            <div>
+                <button type="submit">Acessar</button>
+            </div>
+        </form>
     </div>
 </div>
 
