--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -7,7 +7,31 @@
 <div class="flex items-center justify-center min-h-screen overflow-hidden">
     <div class="w-full max-w-sm p-6 bg-white rounded-xl shadow-md">
         <h2 class="text-2xl font-bold text-center mb-6 text-gray-800">Registrar Usuário</h2>
-    
+
+        <form method="POST">
+            {% csrf_token %}
+
+            {% if form.non_field_errors %}
+                {% for error in form.non_field_errors %}
+                    <div>
+                        <p class="text-red-700">{{ error }}</p>
+                    </div>
+                {% endfor %}
+            {% endif %}
+
+            <label for="{{ form.username.id_for_label }}" class="block text-gray-700">Usuário:</label>
+            {{ form.username }}
+
+            <label for="{{ form.password.id_for_label }}" class="block text-gray-700">Senha:</label>
+            {{ form.password }}
+
+            <label for="{{ form.confirm_password.id_for_label }}" class="block text-gray-700">Confirme a Senha:</label>
+            {{ form.confirm_password }}
+
+            <div>
+                <button type="submit">Registrar</button>
+            </div>
+        </form>
     </div>
 </div>
 
