--- a/ne_control/templates/ne_control/list.html
+++ b/ne_control/templates/ne_control/list.html
@@ -11,7 +11,7 @@
 
         <!-- Cabeçalho, Pesquisar e Adicionar Nota -->
         <div class="mb-4 flex flex-col md:flex-row justify-between gap-4">
-            <input type="text" placeholder="Pesquisar NE ou Responsável..."
+            <input id="search" type="text" placeholder="Pesquisar NE ou Responsável..."
                 class="border border-gray-300 rounded-lg px-4 py-2 w-full md:w-1/3" />
             <button class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700">
                 Adicionar Nota
@@ -41,7 +41,7 @@
             <!-- Informações da lista. -->
             <tbody>
                 {% for note_ne in notes_ne %}
-                <tr class="hover:bg-gray-100">
+                <tr class="table-line hover:bg-gray-100">
                     <td class="px-4 py-2 border">{{ note_ne.ug }}</td>
                     <td class="px-4 py-2 border">{{ note_ne.pi }}</td>
                     <td class="px-4 py-2 border">{{ note_ne.nd }}</td>
@@ -53,11 +53,81 @@
                     <td class="px-4 py-2 border">{{ note_ne.pago|brl }}</td>
                     <td class="px-4 py-2 border">{{ note_ne.responsavel }}</td>
                     <td class="px-4 py-2 border">{{ note_ne.data_contato }}</td>
+
+                    <!-- Botão que ao se expandir mostra a ultima medida tomada -->
+                    <td class="px-2 py-2 border">
+                        <button class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 toggle-measure"
+                            type="button" data-target="measure-{{ forloop.counter }}">
+                            HISTÓRICO
+                        </button>
+                    </td>
                 </tr>
+
+                {% with action=note_ne.actions_taken.last %}
+                {% if action %}
+                <tr id="measure-{{ forloop.counter }}" class="hidden hover:bg-gray-100">
+                    <td colspan="3" class="px-6 py-4 border">Responsável: {{ action.responsible }}</td>
+                    <td colspan="1" class="px-6 py-4 border">Data Contato: {{ action.date }}</td>
+                    <td colspan="2" class="px-6 py-4 border">Medida Tomada: {{ action.description }}</td>
+                    <td colspan="3" class="px-6 py-4 border">Previsão Entrega: {{ action.previ_date }}</td>
+                    <td colspan="3" class="px-6 py-4 border">
+                        <ul>
+                            <li>
+                                <a href="#"
+                                    class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700">
+                                    Cadastrar nova medida
+                                </a>
+                            </li><br>
+                            <li>
+                                <a href="{% url 'show' note_ne.cod_ne %}"
+                                    class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700">
+                                    Visualização Detalhada
+                                </a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+                {% else %}
+                <tr id="measure-{{ forloop.counter }}" class="hidden hover:bg-gray-100">
+                    <td colspan="12" class="px-6 py-4 text-gray-500 border text-center">
+                        Nenhuma medida registrada.
+                    </td>
+                </tr>
+                {% endif %}
+                {% endwith %}
+
                 {% endfor %}
             </tbody>
         </table>
     </div>
 </div>
+
+<script>
+    // Mostrar a ultima medida tomada.
+    document.querySelectorAll('.toggle-measure').forEach(button => {
+        button.addEventListener('click', () => {
+            const targetId = button.getAttribute('data-target');
+            const targetRow = document.getElementById(targetId);
+            if (targetRow) {
+                targetRow.classList.toggle('hidden');
+            }
+        });
+    });
+
+    // Função do pesquisar.
+    document.getElementById("search").addEventListener("input", function () {
+        const termo = this.value.toLowerCase();
+        const linhas = document.querySelectorAll(".table-line");
+
+        linhas.forEach((linha) => {
+            const texto = linha.textContent.toLowerCase();
+            if (texto.includes(termo)) {
+                linha.style.display = "";
+            } else {
+                linha.style.display = "none";
+            }
+        });
+    });
+</script>
 
 {% endblock %}
