--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -13,6 +13,16 @@
     <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 <body class="bg-gray-100">
+    <!-- Menu de navegação do site -->
+    <nav>
+        <ul>
+            <li><a href="{% url 'list' %}">Minhas NEs</a></li>
+            <li><a href="{% url 'general-list' %}">Todas as NEs</a></li>
+            {% if user.role == 'admin' %}
+                <li><a href="{% url 'manage' %}">Controle de NEs</a></li>
+            {% endif %}
+        </ul>
+    </nav>
 
     <!-- Conteúdo do Sistema -->
     {% block content %}{% endblock %}
