--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -21,6 +21,7 @@
             {% if user.role == 'admin' %}
                 <li><a href="{% url 'manage' %}">Controle de NEs</a></li>
             {% endif %}
+            <li><a href="{% url 'logout' %}">Sair</a></li>
         </ul>
     </nav>
 
