--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,49 +1,27 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="pt_BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %}</title>
+{% extends 'log_and_reg.html' %}
 
-    <!-- Tailwind -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    
-    <!-- Style.css -->
-    <link rel="stylesheet" href="{% static 'style.css' %}">
-</head>
-    <div class="flex items-center justify-center min-h-screen overflow-hidden">
-        <div class="w-full max-w-sm p-6 bg-white rounded-xl shadow-md">
-            <h2 class="text-2xl font-bold text-center mb-6 text-gray-800">Acessar o Controle de</h2>
+{% block title %}Login{% endblock %}
 
-            <form method="POST">
-                {% csrf_token %}
+{% block content %}
 
-                {% if messages %}
-                    {% for msg in messages %}
-                        <div id="pop_up"
-                                class="fixed top-5 right-5 px-4 py-2 rounded shadow-md
-                                        {% if msg.tags == 'success' %}bg-green-500 text-white
-                                        {% elif msg.tags == 'error' %}bg-red-500 text-white
-                                        {% elif msg.tags == 'warning' %}bg-yellow-500 text-black
-                                        {% elif msg.tags == 'info' %}bg-blue-500 text-white
-                                        {% else %}bg-gray-500 text-white{% endif %}">
-                            {{ msg }}
-                        </div>
-                    {% endfor %}
-                {% endif %}
-                
-                <label for="{{ form.username.id_for_label }}" class="block text-gray-700">Usuário</label>
-                {{ form.username }}
+<div class="flex items-center justify-center min-h-screen overflow-hidden">
+    <div class="w-full max-w-sm p-6 bg-white rounded-xl shadow-md">
+        <h2 class="text-2xl font-bold text-center mb-6 text-gray-800">Acessar o Controle de</h2>
 
-                <label for="{{ form.password.id_for_label }}" class="block text-gray-700">Senha</label>
-                {{ form.password }}
+        <form method="POST">
+            {% csrf_token %}
 
-                <div>
-                    <button type="submit">Acessar</button>
-                </div>
-            </form>
-        </div>
+            <label for="{{ form.username.id_for_label }}" class="block text-gray-700">Usuário</label>
+            {{ form.username }}
+
+            <label for="{{ form.password.id_for_label }}" class="block text-gray-700">Senha</label>
+            {{ form.password }}
+
+            <div>
+                <button type="submit">Acessar</button>
+            </div>
+        </form>
     </div>
-</body>
-</html>
+</div>
+
+{% endblock %}
