--- a/ne_control/templates/ne_control/list.html
+++ b/ne_control/templates/ne_control/list.html
@@ -13,9 +13,6 @@
         <div class="mb-4 flex flex-col md:flex-row justify-between gap-4">
             <input id="search" type="text" placeholder="Pesquisar NE ou Responsável..."
                 class="border border-gray-300 rounded-lg px-4 py-2 w-full md:w-1/3" />
-            <button class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700">
-                Adicionar Nota
-            </button>
         </div>
 
         <!-- Menu da lista das NEs -->
@@ -23,114 +20,46 @@
             <!-- Campos da lista. -->
             <thead class="bg-gray-200 text-gray-700">
                 <tr>
-                    <th class="px-4 py-2 border">UG</th>
-                    <th class="px-4 py-2 border">PI</th>
-                    <th class="px-4 py-2 border">ND</th>
                     <th class="px-4 py-2 border">NE</th>
-                    <th class="px-4 py-2 border">DIAS</th>
                     <th class="px-4 py-2 border">A LIQUIDAR</th>
                     <th class="px-4 py-2 border">LIQUIDADO A PAGAR</th>
                     <th class="px-4 py-2 border">TOTAL A PAGAR</th>
                     <th class="px-4 py-2 border">PAGO</th>
-                    <th class="px-4 py-2 border">RESPONSÁVEL</th>
-                    <th class="px-4 py-2 border">DATA CONTATO</th>
-                    <th class="px-4 py-2 border">HISTÓRICO MEDIDAS</th>
+                    <th class="px-4 py-2 border"></th>
                 </tr>
             </thead>
 
             <!-- Informações da lista. -->
             <tbody>
+                
                 {% for note_ne in notes_ne %}
-                <tr class="table-line hover:bg-gray-100">
-                    <td class="px-4 py-2 border">{{ note_ne.ug }}</td>
-                    <td class="px-4 py-2 border">{{ note_ne.pi }}</td>
-                    <td class="px-4 py-2 border">{{ note_ne.nd }}</td>
-                    <td class="px-4 py-2 border">{{ note_ne.cod_ne }}</td>
-                    <td class="px-4 py-2 border">{{ note_ne.dias }}</td>
-                    <td class="px-4 py-2 border">{{ note_ne.a_liquidar|brl }}</td>
-                    <td class="px-4 py-2 border">{{ note_ne.liquidado_pagar|brl }}</td>
-                    <td class="px-4 py-2 border">{{ note_ne.total_pagar|brl }}</td>
-                    <td class="px-4 py-2 border">{{ note_ne.pago|brl }}</td>
-                    <td class="px-4 py-2 border">{{ note_ne.responsavel }}</td>
-                    <td class="px-4 py-2 border">{{ note_ne.data_contato }}</td>
+                    <form method="POST" action="{% url 'list' %}">
+                        {% csrf_token %}
 
-                    <!-- Botão que ao se expandir mostra a ultima medida tomada -->
-                    <td class="px-2 py-2 border">
-                        <button class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 toggle-measure"
-                            type="button" data-target="measure-{{ forloop.counter }}">
-                            HISTÓRICO
-                        </button>
-                    </td>
-                </tr>
+                        <tr class="table-line hover:bg-gray-100">
+                            <td class="px-4 py-2 border">{{ note_ne.cod_ne }}</td>
+                            <td class="px-4 py-2 border">{{ note_ne.a_liquidar|brl }}</td>
+                            <td class="px-4 py-2 border">{{ note_ne.liquidado_pagar|brl }}</td>
+                            <td class="px-4 py-2 border">{{ note_ne.total_pagar|brl }}</td>
+                            <td class="px-4 py-2 border">{{ note_ne.pago|brl }}</td>
 
-                {% with action=note_ne.actions_taken.last %}
-                {% if action %}
-                <tr id="measure-{{ forloop.counter }}" class="hidden hover:bg-gray-100">
-                    <td colspan="3" class="px-6 py-4 border">Responsável: {{ action.responsible }}</td>
-                    <td colspan="1" class="px-6 py-4 border">Data Contato: {{ action.date|br_date }}</td>
-                    <td colspan="2" class="px-6 py-4 border">Medida Tomada: {{ action.description }}</td>
-                    <td colspan="3" class="px-6 py-4 border">Previsão Entrega: {{ action.previ_date|br_date }}</td>
-                    <td colspan="3" class="px-6 py-4 border">
-                        <ul>
-                            <li>
-                                <a href="{% url 'show' note_ne.cod_ne %}#action_form"
-                                    class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700">
-                                    Cadastrar nova medida
-                                </a>
-                            </li><br>
-                            <li>
-                                <a href="{% url 'show' note_ne.cod_ne %}"
-                                    class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700">
-                                    Visualização Detalhada
-                                </a>
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
-                {% else %}
-                <tr id="measure-{{ forloop.counter }}" class="hidden hover:bg-gray-100">
-                    <td colspan="12" class="px-6 py-4 text-gray-500 border text-center">
-                        Nenhuma medida registrada.
-                        <a href="{% url 'show' note_ne.cod_ne %}#action_form"
-                            class="mt-2 inline-block bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700">
-                            Cadastrar nova medida
-                        </a>
-                    </td>
-                </tr>
-                {% endif %}
-                {% endwith %}
+                            <td class="px-2 py-2 border">
+
+                                <!-- Codigo do NE a ser reivindicado -->
+                                <input class="hidden" type="text" name="cod_ne" value="{{ note_ne.cod_ne }}">
+
+                                <button class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 toggle-measure"
+                                    type="submit">
+                                    REIVINDICAR
+                                </button>
+                            </td>
+                        </tr>
+                    </form>
                 {% endfor %}
             </tbody>
         </table>
     </div>
 </div>
 
-<script>
-    // Mostrar a ultima medida tomada.
-    document.querySelectorAll('.toggle-measure').forEach(button => {
-        button.addEventListener('click', () => {
-            const targetId = button.getAttribute('data-target');
-            const targetRow = document.getElementById(targetId);
-            if (targetRow) {
-                targetRow.classList.toggle('hidden');
-            }
-        });
-    });
-
-    // Função do pesquisar.
-    document.getElementById("search").addEventListener("input", function () {
-        const term = this.value.toLowerCase();
-        const lines = document.querySelectorAll(".table-line");
-
-        lines.forEach((line) => {
-            const text = line.textContent.toLowerCase();
-            if (text.includes(term)) {
-                line.style.display = "";
-            } else {
-                line.style.display = "none";
-            }
-        });
-    });
-</script>
-
 {% endblock %}
+
